@@ -35,6 +35,7 @@ BUGS FROM PREVIOUS RELEASE
 JIRA Issues Addressed
 ---------------------
 * DISCOVERY-3 (https://issues.apache.org/jira/browse/DISCOVERY-3)
+* DISCOVERY-6 (https://issues.apache.org/jira/browse/DISCOVERY-6)
 * DISCOVERY-7 (https://issues.apache.org/jira/browse/DISCOVERY-7)
 * DISCOVERY-9 (https://issues.apache.org/jira/browse/DISCOVERY-9)
 * DISCOVERY-11 (https://issues.apache.org/jira/browse/DISCOVERY-11)
